Add a mapping system for pages to exclude the pages we are not able to load, avoid crashing when requesting "invalid" pages.

BUG: 156608

svn path=/trunk/KDE/kdegraphics/okular/; revision=765972